Integrate performance tracking with custom annotation and AOP; switch logging to Log4j2; apply minor code improvements and dependency updates.